...
    self.approveButton.hidden = NO;
    self.denyButton.hidden = NO;

    [self.approveButton setTitleColor:[UIColor whiteColor] forState:UIControlStateNormal];
    [self.denyButton setTitleColor:[UIColor whiteColor] forState:UIControlStateNormal];

    [self.approveButton setTitle:@"Approve" forState:UIControlStateNormal];
    [self.denyButton setTitle:@"Deny" forState:UIControlStateNormal];

    [self.approveButton setBackgroundColor:[UIColor colorWithHexString:@"#1b89cf"]];
    [self.denyButton setBackgroundColor:[UIColor colorWithHexString:@"#d73131"]];

    [self.approveButton.layer setCornerRadius:3.0];
    [self.denyButton.layer setCornerRadius:3.0];
...

        dispatch_async(dispatch_get_main_queue(), ^{
            [self.approveLoadingIndicator stopAnimating];
        });

        if (error != nil) {
            [self showAlertWithTitle:@"Request cannot be approved" message:error.localizedDescription callbackBlock:^{
                [self setupUI];
            }];
            return;
        }

        [self showAlertWithTitle:@"Approved" message:@"Request approved successfully" callbackBlock:^{

            // Go back to previous screen
            dispatch_async(dispatch_get_main_queue(), ^{
                [self.navigationController popViewControllerAnimated:YES];
            });
        }];
...

        dispatch_async(dispatch_get_main_queue(), ^{
            [self.denyLoadingIndicator stopAnimating];
        });

        if (error != nil) {
            [self showAlertWithTitle:@"Request cannot be denied" message:error.localizedDescription callbackBlock:^{
                [self setupUI];
            }];
            return;
        }

        [self showAlertWithTitle:@"Denied" message:@"Request denied successfully" callbackBlock:^{

            // Go back to previous screen
            dispatch_async(dispatch_get_main_queue(), ^{
                [self.navigationController popViewControllerAnimated:YES];
            });
        }];
...
}

- (void)showAlertWithTitle:(NSString *)title message:(NSString *)message callbackBlock:(void (^)(void))callbackBlock {

    UIAlertController *alertController = [UIAlertController alertControllerWithTitle:title message:message preferredStyle:UIAlertControllerStyleAlert];

    UIAlertAction *action = [UIAlertAction actionWithTitle:@"OK" style:UIAlertActionStyleDefault handler:^(UIAlertAction * _Nonnull action) {

        if (callbackBlock != nil) {
            callbackBlock();
        }

    }];
...
