...
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" placeholder="https required" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bwp-qT-U6r">
                                <rect key="frame" x="24" y="357" width="327" height="25"/>
                                <constraints>
...
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                <state key="normal" title="Register Device">
                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
...
                                <segments>
                                    <segment title="Pending"/>
                                    <segment title="Archive"/>
                                </segments>
                                <color key="tintColor" red="0.10588235294117647" green="0.53725490196078429" blue="0.81176470588235294" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                        </variation>
                    </view>
                    <tabBarItem key="tabBarItem" title="Requests" image="requests" selectedImage="requests" id="nKQ-pA-RMw"/>
                    <toolbarItems/>
                    <navigationItem key="navigationItem" title="Requests" id="ekK-Nz-GTC">
                        <barButtonItem key="backBarButtonItem" title="Back" id="F83-aF-qSK"/>
                    </navigationItem>
                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="..." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="30" translatesAutoresizingMaskIntoConstraints="NO" id="bd0-yf-WGd">
                                <rect key="frame" x="16" y="244" width="343" height="67"/>
                                <accessibility key="accessibilityConfiguration" identifier="totpLabel">
                                    <accessibilityTraits key="traits" staticText="YES" notEnabled="YES"/>
                                </accessibility>
...
                        </constraints>
                    </view>
                    <tabBarItem key="tabBarItem" title="Tokens" image="tokens" selectedImage="tokens" id="vE0-Pm-C5O"/>
                    <navigationItem key="navigationItem" title="Tokens" id="m1J-Rp-mTP">
                        <barButtonItem key="backBarButtonItem" title="Back" id="YIv-zU-83i"/>
...
                        </variation>
                    </view>
                    <navigationItem key="navigationItem" title="Request" id="u2F-1R-8KT">
                        <barButtonItem key="backBarButtonItem" title="Back" id="Llg-Nf-AFG"/>
                    </navigationItem>
...
