...
- (void)getRegistrationTokenForAuthyID:(NSString *)authyID backendURL:(NSString *)backendURL withCompletion:(void(^) (NSString *registrationToken))completion {

    [self.registerDeviceUseCase getRegistrationTokenForAuthyID:authyID andBackendURL:backendURL completion:^(RegistrationResponse *registrationResponse) {

        NSString *registrationToken = registrationResponse.registrationToken;
        if (registrationToken == nil || [registrationToken isEqualToString:@""]) {
            [self showErrorAlertWithTitle:@"Device Registration Failed" andMessage:registrationResponse.messageError];
            return;
        }

        completion(registrationToken);

    }];
...
    [self configureUIElementsWhileRegistering];

    // Validate fields

    NSString *authyId = self.authyIDTextField.text;
    if ([authyId isEqualToString:@""]) {
        [self showErrorAlertWithTitle:@"Authy ID invalid" andMessage:@"Make sure the value you entered is correct"];
        return;
    }

    NSString *backendURL = self.backendURLTextField.text;
    if ([backendURL isEqualToString:@""]) {
        [self showErrorAlertWithTitle:@"Backend URL invalid" andMessage:@"Make sure the value you entered is correct"];
        return;
    }

    // Obtain registration token
    [self getRegistrationTokenForAuthyID:authyId backendURL:backendURL withCompletion:^(NSString *registrationToken) {

...
