...

- (void)viewWillAppear:(BOOL)animated {

    self.navigationController.navigationBar.topItem.rightBarButtonItem = nil;

    // Left bar button item - Device ID
    UIBarButtonItem *deviceIdBarButtonItem = [[UIBarButtonItem alloc] initWithTitle:@"ID" style:UIBarButtonItemStylePlain target:self action:@selector(getIDs:)];
    [deviceIdBarButtonItem setTintColor:[UIColor colorWithHexString:defaultColor]];
    self.navigationController.navigationBar.topItem.leftBarButtonItem = deviceIdBarButtonItem;

    self.tableView.tableFooterView = [[UIView alloc] init];

    if(!self.appsTableExists) {
...
    UIAlertAction *okAction = [UIAlertAction actionWithTitle:@"OK" style:UIAlertActionStyleDefault handler:nil];
    [okAction setValue:[UIColor colorWithHexString:defaultColor] forKey:@"titleTextColor"];
    [alert addAction:okAction];

    // Logout Action
    __weak AppsTableViewController *weakSelf = self;
    UIAlertAction *logoutAction = [UIAlertAction actionWithTitle:@"Logout" style:UIAlertActionStyleDestructive handler:^(UIAlertAction *action) {

        [sharedTwilioAuth clearLocalData];
        [DeviceResetManager resetDeviceAndGetRegistrationViewForCurrentView:weakSelf withCustomTitle:@"Local Data Deleted"];

    }];
    [alert addAction:logoutAction];

    // Present Alert
    [self presentViewController:alert animated:YES completion:nil];
...
